<resources>
    <string name="app_name">Sportly</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Map</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="title_favorites">Favourites</string>
    <string name="title_my_ratings">My Ratings</string>
    <string name="title_my_events">My Events</string>
    <string name="title_profile_management">Profile Management</string>
    <string name="title_settings">Settings</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="facebook_app_id">189301622103991</string>
    <string name="fb_login_protocol_scheme">fb189301622103991</string>
    <string name="accepted">Accepted</string>
    <string name="queue">Queue</string>
    <string name="invite">Invite</string>
    <string name="invites">Invites</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_application_list">ApplicationListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>


    <string name="role_selection_label">Select your role:</string>
    <string name="search">Search</string>
    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="all">All</string>
    <string name="default_notification_channel_id">NOTIFICATIONS_CHANNEL</string>
    <string name="switch_conversations">Conversations</string>
    <string name="switch_friends">Friends</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="label_location">Location</string>
    <string name="label_event_name">Event name</string>
    <string name="label_date">Date</string>
    <string name="label_currency">Currency</string>
    <string name="label_price">Price</string>
    <string name="label_description">Description</string>
    <string name="label_starting_time">Starting time</string>
    <string name="label_ending_time">Ending time</string>
    <string name="label_number_of_people">Number of people</string>
    <string name="confirm">Confirm</string>
    <string-array name="roles_array">
        <item>Creator</item>
        <item>Participant</item>
    </string-array>

</resources>
