<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_profile_management"
            android:icon="@drawable/ic_build_primary_24dp"
            android:title="@string/title_profile_management" />

        <item
            android:id="@+id/navigation_my_events"
            android:icon="@drawable/ic_event_primary_24dp"
            android:title="@string/title_my_events" />

        <item
            android:id="@+id/navigation_invite"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/invites" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_primary_24dp"
            android:title="@string/title_settings" />
    </group>
</menu>